added testcase for negative remaining times fixed announcement of negative/null remaining times removed unneeded private test-accessor

--- a/VirtualBoxServiceTest/VirtualBoxServiceTest.csproj
+++ b/VirtualBoxServiceTest/VirtualBoxServiceTest.csproj
@@ -87,9 +87,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="libs\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Shadow Include="Testverweise\VirtualBoxService.accessor" />
+    <Folder Include="Testverweise\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
